2020-08-29  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac (AC_PREREQ): Require Autoconf >= 2.64.
	* doc/configure.ac (AC_PREREQ): Likewise.
	* lib/configure.ac (AC_PREREQ): Likewise.
	* src/configure.ac (AC_PREREQ): Likewise.
	* tests/configure.ac (AC_PREREQ): Likewise.
	* autogen.sh: Update comment.

2020-02-10  Bruno Haible  <bruno@clisp.org>

	Rely entirely on the GNU Build System.
	* Makefile.vms: Remove file.
	* INSTALL.vms: Remove file.
	* Makefile.in (SOURCE_FILES): Remove them.
	* Makefile.devel (src/config.h_vms): Remove target.
	(totally-clean): Update.
	* src/Makefile.in (GENERATED_FILES): Remove config.h_vms.

2018-10-24  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.
	* configure.ac (AC_PREREQ): Require Autoconf >= 2.63.
	* doc/configure.ac (AC_PREREQ): Likewise.
	* lib/configure.ac (AC_PREREQ): Likewise.
	* src/configure.ac (AC_PREREQ): Likewise.
	* tests/configure.ac (AC_PREREQ): Likewise.
	* autogen.sh: Update comment.

2018-09-16  Bruno Haible  <bruno@clisp.org>

	Fix "Unescaped left brace in regex" warnings from Perl 5.26.
	Reported and patch by Jehan <jehan@girinstud.io> <jehan@zemarmot.net> at
	<https://savannah.gnu.org/bugs/?54088>.
	* doc/texi2html: Escape braces in regular expressions.

2018-09-14  Bruno Haible  <bruno@clisp.org>

	doc: Assume texinfo 4.0 or newer.
	* doc/gperf.texi: Omit Next, Prev, Up fields from @node lines.

2018-09-08  Bruno Haible  <bruno@clisp.org>

	Avoid "implicit fallthrough" warnings also from clang.
	Reported by Nico Weber <thakis@chromium.org> in
	<https://savannah.gnu.org/bugs/?53029>.
	Clang emits these warnings in C++11 mode only, see
	<https://clang.llvm.org/docs/AttributeReference.html#fallthrough>,
	and only in clang 3.9 or newer, see
	<https://releases.llvm.org/3.9.0/tools/clang/docs/ReleaseNotes.html>.
	To avoid them, either [[fallthrough]] or the (nearly equivalent) older
	[[clang::fallthrough]] can be used, see