@@ -1,5 +1,11 @@
 2020-08-29  Bruno Haible  <bruno@clisp.org>
 
+	Fix link error on native Windows with MSVC/clang.
+	* tests/test2.c (SET_BINARY): On native Windows, use _setmode, not
+	setmode.
+
+2020-08-29  Bruno Haible  <bruno@clisp.org>
+
 	Update after gnulib changed.
 	* configure.ac (AC_PREREQ): Require Autoconf >= 2.64.
 	* doc/configure.ac (AC_PREREQ): Likewise.
